* Feature 'animateness' renamed to 'animacy'. Affected drivers:
  xx::multext
  cs::pdt
  eu::conll
  fa::conll
  hsb::sorokin
  nl::cgn
  pl::ipipan
* Feature 'definiteness' renamed to 'definite'. Affected drivers:
  xx::multext
  ar::padt ar::conll ar::conll2007
  bg::conll
  da::conll
  de::smor
  el::conll
  fo::setur
  he::conll
  hu::conll
  it::conll
  nl::cgn nl::conll
* Feature 'negativeness' renamed to 'polarity'. Affected drivers:
  xx::multext
  ar::padt ar::conll ar::conll2007
  bg::conll
  bn::conll
  ca::conll2009
  cs::pdt cs::ajka cs::pmk cs::pmkkr
  de::stts de::smor
  el::conll
  et::puudepank
  fi::turku
  he::conll
  hu::conll
  ja::conll
  mt::mlss
  pl::ipipan
* Feature 'politeness' renamed to 'polite'. Features 'abspoliteness',
  'ergpoliteness' and 'datpoliteness' renamed similarly. Affected drivers:
  ca::conll2009
  cs::pmk
  da::conll
  eu::conll
  hi::conll
  ja::conll
  nl::cgn
* Renamed and new feature values:
  * abspolite=infm instead of abspolite=inf
  * abspolite=form instead of abspolite=pol
  * abspolite=elev
  * abspolite=humb
  * animacy=hum
  * aspect=prosp instead of aspect=pro
  * datpolite=infm instead of datpolite=inf
  * datpolite=form instead of datpolite=pol
  * datpolite=elev
  * datpolite=humb
  * definite=cons instead of definite=red
  * ergpolite=infm instead of ergpolite=inf
  * ergpolite=form instead of ergpolite=pol
  * ergpolite=elev
  * ergpolite=humb
  * polite=infm instead of polite=inf
  * polite=form instead of polite=pol
  * polite=elev
  * polite=humb
  * verbform=conv instead of verbform=trans

Interface:
* Added new methods:
  * is_construct() is true if definite=cons
  * is_converb() is true if verbform=conv
  * is_elevating() is true if polite=elev
  * is_formal() is true if polite=form
  * is_human() is true if animacy=hum
  * is_humbling() is true if polite=humb

Fixes:
* MUL::Upos: the tag CONJ changed to CCONJ in Universal Dependencies v2.